@@ -1,3 +1,8 @@
+2001-12-12  Michael Meeks  <michael@ximian.com>
+
+	* bonobo/bonobo-ui-engine.c
+	(bonobo_ui_engine_set_ui_container): warning fix.
+
 2001-12-12  jacob berkman  <jacob@ximian.com>
 
 	* bonobo/bonobo-*.h (BONOBO_IS_*_CLASS): s/obj/klass/ where
@@ -54,7 +59,7 @@
 	* tests/test-moniker.c (display_as_control): dump
 	the exception string.
 
-Wed Dec 12 10:36:55 2001  George Lebl <jirka@5z.com>
+2001-12-12  George Lebl  <jirka@5z.com>
 
 	* bonobo/bonobo-dock-item.c, bonobo/bonobo-plug.c,
 	  bonobo/bonobo-selector-widget.c, bonobo/bonobo-selector.c,
